2005-04-08  Nathaniel Smith  <njs@codesourcery.com>

	* commands.cc (revert): Call maybe_update_inodeprints.
	* app_state.cc (set_restriction): Clear any old restrictions
	first.

2005-04-08  Jon Bright <jon@siliconcircus.com>
	* testsuite.at (NOT_ON_WIN32): Add a function to prevent tests from
	running on Win32 (for cases where the functionality being tested 
	makes no sense on Win32.  Not for cases where the functionality
	just isn't there yet on Win32.)
	* tests/t_final_space.at: Use NOT_ON_WIN32.  The filenames "a b" 
	and "a b " refer to the same file on Win32, obviating this test

2005-04-08  Jon Bright <jon@siliconcircus.com>
	* win32/inodeprint.cc (inodeprint_file): Still close the file if
	getting its time failed.
	* tests/t_netsync_sigpipe.at: Don't bother doing a kill -PIPE on
	Win32.  There is no real SIGPIPE on Win32 and sockets don't get this
	signal if their pipe goes away.  MinGW's kill seems to translate
	-PIPE to some signal that *does* kill monotone, so it seems like the
	easiest solution is just not to send the signal in the first place
	here.
	* tests/t_automate_ancestry_difference.at: Remove old 
	CHECK_SAME_STDOUT call which I'd left by accident.
	* tests/t_automate_leaves.at: Canonicalise monotone output before
	passing to CHECK_SAME_STDOUT
	* tests/t_log_depth.at: Check line count with arithmetic comparison
	rather than autotest's string comparison

2005-04-08  Nathaniel Smith  <njs@codesourcery.com>

	* inodeprint.cc (operator<<): Typo.

	* inodeprint.{hh,cc} (build_inodeprint_map,
	build_restricted_inodeprint_map): Remove unused functions.

2005-04-08  Nathaniel Smith  <njs@codesourcery.com>

	* work.cc: Remove doxygen comments.  Comments are good; comments
	that are longer than the function they document, and give less
	information, are not so good...

2005-04-08  Nathaniel Smith  <njs@codesourcery.com>

	* ChangeLog: Fixup after merge.

2005-04-08  Nathaniel Smith  <njs@codesourcery.com>
